--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="container">
     <h1>Welcome to my page!</h1>
+    <img src="mijnfoto.jpg.jpg" alt="Mijn foto" class="profile-pic">
     <p>Click the button to change the background color 🎨</p>
     <button onclick="changeColor()">Change Color</button>
   </div>
